k8s/dev/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-deployment
  namespace: dev
  labels:
    app: portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
        - name: portfolio
          image: 142969859154.dkr.ecr.eu-west-2.amazonaws.com/multienv-app:v1
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 20
